test/fail_compilation/fail250.d
struct A
{
    this() {}
}

void main()
{
    auto a = A();
}

